tratando dados amazon

--- a/casas_bahia/casas_bahia.ipynb
+++ b/casas_bahia/casas_bahia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.common.by import By\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.support import expected_conditions as EC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,30 +27,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [C:\\Users\\Felip\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+     ]
+    }
+   ],
    "source": [
     "## Prepara a página\n",
     "url = 'https://www.casasbahia.com.br/notebook/b'\n",
-    "driver = webdriver.Chrome('C:/Users/teixe/.wdm/drivers/chromedriver/win32/94.0.4606.61/chromedriver.exe')\n",
+    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "driver.get(url)\n",
     "\n",
     "## XPath do botão\n",
     "xpath = '//*[@id=\"__next\"]/div[2]/div/div/div[5]/div[2]/div/section/div[4]/div/div/div/button'\n",
     "driver.find_element_by_xpath(xpath).click()\n",
     "\n",
-    "element = WebDriverWait(driver, 15).until(\n",
-    "        EC.presence_of_element_located((By.XPATH, xpath))\n",
-    ").click()\n",
-    "element = WebDriverWait(driver, 15).until(\n",
-    "        EC.presence_of_element_located((By.XPATH, xpath))\n",
-    ").click()"
+    "for _ in range(0,50):\n",
+    "        element = WebDriverWait(driver, 15).until(\n",
+    "                EC.presence_of_element_located((By.XPATH, xpath))\n",
+    "        ).click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -104,93 +116,117 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Notebook Acer Core i5-10210U 8GB 512GB SSD Tel...</td>\n",
-       "      <td>287</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3999.00</td>\n",
+       "      <td>Notebook Samsung Dual Core 4GB 500GB Tela Full...</td>\n",
+       "      <td>249</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2639.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Notebook Positivo Intel Atom Quad Core 4GB 64G...</td>\n",
-       "      <td>466</td>\n",
+       "      <td>467</td>\n",
        "      <td>4.5</td>\n",
        "      <td>1589.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Notebook Positivo Intel Atom Quad Core 4GB 128...</td>\n",
-       "      <td>474</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2139.00</td>\n",
+       "      <td>Notebook Acer Core i5-10210U 8GB 512GB SSD Tel...</td>\n",
+       "      <td>292</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3999.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Notebook Samsung Dual Core 4GB 500GB Tela Full...</td>\n",
-       "      <td>248</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2639.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>Notebook 2 em 1 Positivo Dual Core 4GB 64GB eM...</td>\n",
        "      <td>354</td>\n",
        "      <td>4.5</td>\n",
        "      <td>1799.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>Notebook Samsung Dual Core 4GB 500GB Tela Full...</td>\n",
        "      <td>85</td>\n",
        "      <td>4.5</td>\n",
        "      <td>2649.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Notebook Lenovo Dual Core 4GB 128GB SSD Tela 1...</td>\n",
-       "      <td>131</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2499.00</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Notebook Samsung Core i3-1115G4 4GB 1TB Tela F...</td>\n",
-       "      <td>265</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>3099.00</td>\n",
+       "      <th>1004</th>\n",
+       "      <td>Notebook Positivo Motion Intel Dual Core 4gb R...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2899.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Notebook Gamer Acer NVIDIA GeForce GTX 1650 Co...</td>\n",
-       "      <td>244</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5599.00</td>\n",
+       "      <th>1005</th>\n",
+       "      <td>Notebook Positivo Master N3140, 14\" Intel Core...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4986.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Notebook Positivo Dual Core 4GB 128GB SSD Tela...</td>\n",
-       "      <td>193</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1809.00</td>\n",
+       "      <th>1006</th>\n",
+       "      <td>Notebook Lenovo B330 Intel I5 8gb Ssd 256gb Wi...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2099.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>Notebook Samsung Book E30 Intel Core i3-1115G4...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5399.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008</th>\n",
+       "      <td>Notebook Samsung 11.6 Chromebook4 Intel 2.6Ghz...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4399.90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1009 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                nome num_avali avali    preco\n",
-       "0  Notebook Acer Core i5-10210U 8GB 512GB SSD Tel...       287   5.0  3999.00\n",
-       "1  Notebook Positivo Intel Atom Quad Core 4GB 64G...       466   4.5  1589.00\n",
-       "2  Notebook Positivo Intel Atom Quad Core 4GB 128...       474   4.5  2139.00\n",
-       "3  Notebook Samsung Dual Core 4GB 500GB Tela Full...       248   4.5  2639.00\n",
-       "4  Notebook 2 em 1 Positivo Dual Core 4GB 64GB eM...       354   4.5  1799.00\n",
-       "5  Notebook Samsung Dual Core 4GB 500GB Tela Full...        85   4.5  2649.00\n",
-       "6  Notebook Lenovo Dual Core 4GB 128GB SSD Tela 1...       131   5.0  2499.00\n",
-       "7  Notebook Samsung Core i3-1115G4 4GB 1TB Tela F...       265   4.5  3099.00\n",
-       "8  Notebook Gamer Acer NVIDIA GeForce GTX 1650 Co...       244   5.0  5599.00\n",
-       "9  Notebook Positivo Dual Core 4GB 128GB SSD Tela...       193   4.5  1809.00"
+       "                                                   nome num_avali avali  \\\n",
+       "0     Notebook Samsung Dual Core 4GB 500GB Tela Full...       249   4.5   \n",
+       "1     Notebook Positivo Intel Atom Quad Core 4GB 64G...       467   4.5   \n",
+       "2     Notebook Acer Core i5-10210U 8GB 512GB SSD Tel...       292   5.0   \n",
+       "3     Notebook 2 em 1 Positivo Dual Core 4GB 64GB eM...       354   4.5   \n",
+       "4     Notebook Samsung Dual Core 4GB 500GB Tela Full...        85   4.5   \n",
+       "...                                                 ...       ...   ...   \n",
+       "1004  Notebook Positivo Motion Intel Dual Core 4gb R...         0     0   \n",
+       "1005  Notebook Positivo Master N3140, 14\" Intel Core...         0     0   \n",
+       "1006  Notebook Lenovo B330 Intel I5 8gb Ssd 256gb Wi...         0     0   \n",
+       "1007  Notebook Samsung Book E30 Intel Core i3-1115G4...         0     0   \n",
+       "1008  Notebook Samsung 11.6 Chromebook4 Intel 2.6Ghz...         0     0   \n",
+       "\n",
+       "        preco  \n",
+       "0     2639.00  \n",
+       "1     1589.00  \n",
+       "2     3999.00  \n",
+       "3     1799.00  \n",
+       "4     2649.00  \n",
+       "...       ...  \n",
+       "1004  2899.00  \n",
+       "1005  4986.45  \n",
+       "1006  2099.90  \n",
+       "1007  5399.00  \n",
+       "1008  4399.90  \n",
+       "\n",
+       "[1009 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +234,7 @@
    "source": [
     "import pandas as pd\n",
     "data = pd.DataFrame(itens)\n",
-    "data.head(10)"
+    "data"
    ]
   },
   {
@@ -212,9 +248,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "fe85ba89296c5a2c9ae30362d65b06da0dbfb1d93059a21a7b21822ad4b56145"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -227,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
