--- a/casas_bahia/casas_bahia.ipynb
+++ b/casas_bahia/casas_bahia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -39,21 +39,27 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 94.0.4606\n",
       "Get LATEST driver version for 94.0.4606\n",
-      "Driver [C:\\Users\\Felip\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+      "Driver [C:\\Users\\teixe\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
    "source": [
     "## Prepara a página\n",
-    "url = 'https://www.casasbahia.com.br/notebook/b'\n",
+    "url = 'https://www.casasbahia.com.br/smart-tv/b'\n",
     "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "driver.get(url)\n",
     "\n",
     "## XPath do botão\n",
-    "xpath = '//*[@id=\"__next\"]/div[2]/div/div/div[5]/div[2]/div/section/div[4]/div/div/div/button'\n",
-    "driver.find_element_by_xpath(xpath).click()\n",
     "\n",
-    "for _ in range(0,50):\n",
+    "xpath = '//*[@id=\"__next\"]/div[2]/div/div/div[5]/div[2]/div/section/div[4]/div/div/div/button' # botao notebook e smart-tv\n",
+    "#xpath = '//*[@id=\"__next\"]/div[2]/div/div/div[4]/div[2]/div/section/div[4]/div/div/div/button' # botao smartphone\n",
+    "#xpath = '//*[@id=\"__next\"]/div[2]/div/div/div[5]/div[2]/div/section/div[4]/div/div/div/button'\n",
+    "try:\n",
+    "    driver.find_element_by_xpath(xpath).click()\n",
+    "except:\n",
+    "    print('Erro: Elemento não foi encontrado. Certifique-se de que o XPath está correto')\n",
+    "\n",
+    "for _ in range(0,12):\n",
     "        element = WebDriverWait(driver, 15).until(\n",
     "                EC.presence_of_element_located((By.XPATH, xpath))\n",
     "        ).click()"
@@ -61,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +80,16 @@
     "itens = []\n",
     "for nome, n_aval, aval, preco in zip(names, reviewCount, ratingValue, precos):\n",
     "    item = {'nome': nome.text,\n",
-    "                    \"num_avali\": n_aval.get_attribute(\"content\"),\n",
-    "                    'avali': aval.get_attribute(\"content\"),\n",
-    "                    'preco': preco.text.split(' ')[1].replace('.','').replace(',','.'),\n",
+    "            \"num_avali\": n_aval.get_attribute(\"content\"),\n",
+    "            'avali': aval.get_attribute(\"content\"),\n",
+    "            'preco': preco.text.split(' ')[1].replace('.','').replace(',','.'),\n",
     "                    }\n",
     "    itens.append(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -116,38 +122,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Notebook Samsung Dual Core 4GB 500GB Tela Full...</td>\n",
-       "      <td>249</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2639.00</td>\n",
+       "      <td>Smart TV LED 42” Full HD Philco PTV42G70N5CF c...</td>\n",
+       "      <td>1449</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1896.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Notebook Positivo Intel Atom Quad Core 4GB 64G...</td>\n",
-       "      <td>467</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1589.00</td>\n",
+       "      <td>Smart TV LED 32\" HD Philco PTV32D10N5SKH com D...</td>\n",
+       "      <td>485</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1499.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Notebook Acer Core i5-10210U 8GB 512GB SSD Tel...</td>\n",
-       "      <td>292</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3999.00</td>\n",
+       "      <td>Smart TV LED 43\" Full HD TCL 43S6500FS Android...</td>\n",
+       "      <td>3407</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1999.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Notebook 2 em 1 Positivo Dual Core 4GB 64GB eM...</td>\n",
-       "      <td>354</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1799.00</td>\n",
+       "      <td>Smart TV LED 32\" HD Samsung T4300 com HDR, Sis...</td>\n",
+       "      <td>2882</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1599.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Notebook Samsung Dual Core 4GB 500GB Tela Full...</td>\n",
-       "      <td>85</td>\n",
+       "      <td>Smart TV LED 58\" UHD 4K Philco PTV58F80SNS com...</td>\n",
+       "      <td>969</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>2649.00</td>\n",
+       "      <td>3499.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -157,76 +163,76 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1004</th>\n",
-       "      <td>Notebook Positivo Motion Intel Dual Core 4gb R...</td>\n",
+       "      <th>263</th>\n",
+       "      <td>Smart TV Led Panasonic 50\" 4K Ultra HD com Com...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2899.00</td>\n",
+       "      <td>1952.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1005</th>\n",
-       "      <td>Notebook Positivo Master N3140, 14\" Intel Core...</td>\n",
+       "      <th>264</th>\n",
+       "      <td>Smart TV OLED 55\" LG OLED55CXPSA 4K HDR com Wi...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>4986.45</td>\n",
+       "      <td>3512.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1006</th>\n",
-       "      <td>Notebook Lenovo B330 Intel I5 8gb Ssd 256gb Wi...</td>\n",
+       "      <th>265</th>\n",
+       "      <td>Smart TV Philco 55\" PTV55F62SN 4K LED</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2099.90</td>\n",
+       "      <td>12499.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1007</th>\n",
-       "      <td>Notebook Samsung Book E30 Intel Core i3-1115G4...</td>\n",
+       "      <th>266</th>\n",
+       "      <td>Smart Tv 24Tl520s Lg 24``</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>5399.00</td>\n",
+       "      <td>2299.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1008</th>\n",
-       "      <td>Notebook Samsung 11.6 Chromebook4 Intel 2.6Ghz...</td>\n",
+       "      <th>267</th>\n",
+       "      <td>Smart TV AOC 32 Polegadas Roku TV LED 32S5195/...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>4399.90</td>\n",
+       "      <td>8169.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1009 rows × 4 columns</p>\n",
+       "<p>268 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   nome num_avali avali  \\\n",
-       "0     Notebook Samsung Dual Core 4GB 500GB Tela Full...       249   4.5   \n",
-       "1     Notebook Positivo Intel Atom Quad Core 4GB 64G...       467   4.5   \n",
-       "2     Notebook Acer Core i5-10210U 8GB 512GB SSD Tel...       292   5.0   \n",
-       "3     Notebook 2 em 1 Positivo Dual Core 4GB 64GB eM...       354   4.5   \n",
-       "4     Notebook Samsung Dual Core 4GB 500GB Tela Full...        85   4.5   \n",
-       "...                                                 ...       ...   ...   \n",
-       "1004  Notebook Positivo Motion Intel Dual Core 4gb R...         0     0   \n",
-       "1005  Notebook Positivo Master N3140, 14\" Intel Core...         0     0   \n",
-       "1006  Notebook Lenovo B330 Intel I5 8gb Ssd 256gb Wi...         0     0   \n",
-       "1007  Notebook Samsung Book E30 Intel Core i3-1115G4...         0     0   \n",
-       "1008  Notebook Samsung 11.6 Chromebook4 Intel 2.6Ghz...         0     0   \n",
+       "                                                  nome num_avali avali  \\\n",
+       "0    Smart TV LED 42” Full HD Philco PTV42G70N5CF c...      1449   5.0   \n",
+       "1    Smart TV LED 32\" HD Philco PTV32D10N5SKH com D...       485   5.0   \n",
+       "2    Smart TV LED 43\" Full HD TCL 43S6500FS Android...      3407   4.5   \n",
+       "3    Smart TV LED 32\" HD Samsung T4300 com HDR, Sis...      2882   5.0   \n",
+       "4    Smart TV LED 58\" UHD 4K Philco PTV58F80SNS com...       969   4.5   \n",
+       "..                                                 ...       ...   ...   \n",
+       "263  Smart TV Led Panasonic 50\" 4K Ultra HD com Com...         0     0   \n",
+       "264  Smart TV OLED 55\" LG OLED55CXPSA 4K HDR com Wi...         0     0   \n",
+       "265              Smart TV Philco 55\" PTV55F62SN 4K LED         0     0   \n",
+       "266                          Smart Tv 24Tl520s Lg 24``         0     0   \n",
+       "267  Smart TV AOC 32 Polegadas Roku TV LED 32S5195/...         0     0   \n",
        "\n",
        "        preco  \n",
-       "0     2639.00  \n",
-       "1     1589.00  \n",
-       "2     3999.00  \n",
-       "3     1799.00  \n",
-       "4     2649.00  \n",
-       "...       ...  \n",
-       "1004  2899.00  \n",
-       "1005  4986.45  \n",
-       "1006  2099.90  \n",
-       "1007  5399.00  \n",
-       "1008  4399.90  \n",
+       "0     1896.00  \n",
+       "1     1499.00  \n",
+       "2     1999.00  \n",
+       "3     1599.00  \n",
+       "4     3499.00  \n",
+       "..        ...  \n",
+       "263   1952.99  \n",
+       "264   3512.90  \n",
+       "265  12499.00  \n",
+       "266   2299.90  \n",
+       "267   8169.00  \n",
        "\n",
-       "[1009 rows x 4 columns]"
+       "[268 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,12 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('notebook_CB.csv', sep=';', encoding='utf-8', index=False)"
+    "data.to_csv('smart_tv_CB.csv', sep=';', encoding='utf-8', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -252,7 +265,8 @@
    "hash": "fe85ba89296c5a2c9ae30362d65b06da0dbfb1d93059a21a7b21822ad4b56145"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -265,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
