Retirado outliners de noteboosk e adicionados alguns gráficos

--- a/americanas/americanas_scraper.ipynb
+++ b/americanas/americanas_scraper.ipynb
@@ -68,7 +68,7 @@
     "                \n",
     "                url = \"https://www.americanas.com.br\" + item.a.get(\"href\")\n",
     "                \n",
-    "                cards = {\"descricao\": descricao,  \"Total_Reviews\": Total_Reviews, \"preco\": float(Preco), \"url\": url, \"loja\": \"Americanas\" }\n",
+    "                cards = {\"Descrição\": descricao,  \"TotalReviews\": Total_Reviews, \"Preço\": float(Preco), \"Url\": url, \"Loja\": \"Americanas\" }\n",
     "                Listacards.append(cards)\n",
     "    except:\n",
     "        Listacards = []"
