--- a/americanas/americanas_scraper.ipynb
+++ b/americanas/americanas_scraper.ipynb
@@ -98,7 +98,8 @@
    "outputs": [],
    "source": [
     "def search_produto(pesquisa):\n",
-    "    urls = [f\"https://www.americanas.com.br/busca/{pesquisa}?limit=50&offset={x}\" for x in range(0, 250, 50)]\n",
+    "    pesquisa_path = pesquisa.replace(' ','-')\n",
+    "    urls = [f\"https://www.americanas.com.br/busca/{pesquisa_path}?limit=50&offset={x}\" for x in range(0, 350, 50)]\n",
     "    # LISTA DE TODOS OS HTLMS RETORNADOS\n",
     "    soups = []\n",
     "    \n",
@@ -177,6 +178,32 @@
    "source": [
     "search_produto(\"smartphone\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3254c681",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset salvo com sucesso : output/dataset_geladeira.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_produto(\"geladeira\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "218519b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
