Adicionado dados do ReclameAqui

--- a/reclame_aqui/reclame_aqui.ipynb
+++ b/reclame_aqui/reclame_aqui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coleta o tempo de reposta, que está em uma url diferente\n",
+    "itens_time = []\n",
+    "for index, url in enumerate(urls):\n",
+    "    url_time = url+'lista-reclamacoes/?pagina=1'\n",
+    "    driver.get(url_time)\n",
+    "    time_response = driver.find_elements_by_class_name('company-index-value')[3].text\n",
+    "    dictio = {'Tempo_Resposta':time_response}\n",
+    "    itens_time.append(dictio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +117,7 @@
        "      <th>indice_solucao</th>\n",
        "      <th>nota_consumidor</th>\n",
        "      <th>numero_reclamacoes</th>\n",
+       "      <th>Tempo_Resposta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -112,6 +129,7 @@
        "      <td>82.8</td>\n",
        "      <td>7.04</td>\n",
        "      <td>5658</td>\n",
+       "      <td>3 dias e 8 horas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -121,6 +139,7 @@
        "      <td>92.9</td>\n",
        "      <td>8.36</td>\n",
        "      <td>21120</td>\n",
+       "      <td>2 dias e 8 horas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -130,6 +149,7 @@
        "      <td>85.2</td>\n",
        "      <td>6.37</td>\n",
        "      <td>26801</td>\n",
+       "      <td>8 dias e 9 horas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -139,6 +159,7 @@
        "      <td>92.7</td>\n",
        "      <td>7.76</td>\n",
        "      <td>57316</td>\n",
+       "      <td>7 dias e 3 horas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -148,6 +169,7 @@
        "      <td>85.1</td>\n",
        "      <td>7.84</td>\n",
        "      <td>35222</td>\n",
+       "      <td>19 horas</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -161,15 +183,15 @@
        "3  Magazine Luiza            96.8               80.3           92.7   \n",
        "4          Amazon            99.7                 81           85.1   \n",
        "\n",
-       "  nota_consumidor numero_reclamacoes  \n",
-       "0            7.04               5658  \n",
-       "1            8.36              21120  \n",
-       "2            6.37              26801  \n",
-       "3            7.76              57316  \n",
-       "4            7.84              35222  "
+       "  nota_consumidor numero_reclamacoes    Tempo_Resposta  \n",
+       "0            7.04               5658  3 dias e 8 horas  \n",
+       "1            8.36              21120  2 dias e 8 horas  \n",
+       "2            6.37              26801  8 dias e 9 horas  \n",
+       "3            7.76              57316  7 dias e 3 horas  \n",
+       "4            7.84              35222          19 horas  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,16 +199,18 @@
    "source": [
     "import pandas as pd\n",
     "data = pd.DataFrame(itens)\n",
-    "data"
+    "data_time = pd.DataFrame(itens_time)\n",
+    "df = pd.concat([data, data_time], axis=1)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('reclame_aqui.csv', sep=';', encoding='utf-8', index=False)"
+    "df.to_csv('reclame_aqui.csv', sep=';', encoding='utf-8', index=False)"
    ]
   }
  ],
