Adicionado dados do ReclameAqui

--- a/reclame_aqui/reclame_aqui.ipynb
+++ b/reclame_aqui/reclame_aqui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,23 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Coleta o tempo de reposta, que está em uma url diferente\n",
+    "# Coleta o tempo de reposta (em dias), que está em uma url diferente\n",
     "itens_time = []\n",
     "for index, url in enumerate(urls):\n",
     "    url_time = url+'lista-reclamacoes/?pagina=1'\n",
     "    driver.get(url_time)\n",
     "    time_response = driver.find_elements_by_class_name('company-index-value')[3].text\n",
+    "    if ('dias' in time_response)&('horas' in time_response):\n",
+    "        el = time_response.split(' ')[0::3]\n",
+    "        horas = int(el[1])/24\n",
+    "        time_response = round(float(el[0])+horas, 2)\n",
+    "    else:\n",
+    "        time_response =  round(int(teste.split(' ')[0])/24, 2)\n",
     "    dictio = {'Tempo_Resposta':time_response}\n",
     "    itens_time.append(dictio)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +135,7 @@
        "      <td>82.8</td>\n",
        "      <td>7.04</td>\n",
        "      <td>5658</td>\n",
-       "      <td>3 dias e 8 horas</td>\n",
+       "      <td>3.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -139,7 +145,7 @@
        "      <td>92.9</td>\n",
        "      <td>8.36</td>\n",
        "      <td>21120</td>\n",
-       "      <td>2 dias e 8 horas</td>\n",
+       "      <td>2.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -149,7 +155,7 @@
        "      <td>85.2</td>\n",
        "      <td>6.37</td>\n",
        "      <td>26801</td>\n",
-       "      <td>8 dias e 9 horas</td>\n",
+       "      <td>8.38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -159,7 +165,7 @@
        "      <td>92.7</td>\n",
        "      <td>7.76</td>\n",
        "      <td>57316</td>\n",
-       "      <td>7 dias e 3 horas</td>\n",
+       "      <td>7.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -169,7 +175,7 @@
        "      <td>85.1</td>\n",
        "      <td>7.84</td>\n",
        "      <td>35222</td>\n",
-       "      <td>19 horas</td>\n",
+       "      <td>0.79</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -183,15 +189,15 @@
        "3  Magazine Luiza            96.8               80.3           92.7   \n",
        "4          Amazon            99.7                 81           85.1   \n",
        "\n",
-       "  nota_consumidor numero_reclamacoes    Tempo_Resposta  \n",
-       "0            7.04               5658  3 dias e 8 horas  \n",
-       "1            8.36              21120  2 dias e 8 horas  \n",
-       "2            6.37              26801  8 dias e 9 horas  \n",
-       "3            7.76              57316  7 dias e 3 horas  \n",
-       "4            7.84              35222          19 horas  "
+       "  nota_consumidor numero_reclamacoes  Tempo_Resposta  \n",
+       "0            7.04               5658            3.33  \n",
+       "1            8.36              21120            2.33  \n",
+       "2            6.37              26801            8.38  \n",
+       "3            7.76              57316            7.12  \n",
+       "4            7.84              35222            0.79  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
