--- a/reclame_aqui/reclame_aqui.ipynb
+++ b/reclame_aqui/reclame_aqui.ipynb
@@ -86,7 +86,7 @@
     "        horas = int(el[1])/24\n",
     "        time_response = round(float(el[0])+horas, 2)\n",
     "    else:\n",
-    "        time_response =  round(int(teste.split(' ')[0])/24, 2)\n",
+    "        time_response =  round(int(time_response.split(' ')[0])/24, 2)\n",
     "    dictio = {'Tempo_Resposta':time_response}\n",
     "    itens_time.append(dictio)"
    ]
